<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name">Weather App</string>
  <string name="nav_header_subtitle">Get your local weather now</string>
  <string name="menu_home">Home</string>
  <string name="menu_daily">Daily Forecast</string>
  <string name="menu_about">About</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_documentation">Documentation</string>
  <string name="fragment_settings_title">App Settings</string>
  <string name="home_description_title">Description</string>
  <string name="home_clouds_title">Clouds</string>
  <string name="home_humidity_title">Humidity</string>
  <string name="home_pressure_title">Pressure</string>
  <string name="home_wind_speed_title">Wind Speed</string>
  <string name="home_feels_like_title">Feels like</string>
  <string name="daily_pm">PM</string>
  <string name="daily_am">AM</string>
  <string name="about_app_header">         Weather-App     </string>
  <string name="about_app_text">         Weather-App is a simple tool to help you find out what\'s the weather like in your desired location     </string>
  <string name="about_features_header">         Features     </string>
  <string name="about_features_text_first">         Get a detailed report of the weather in your current location or get a daily temperature report by time and date     </string>
  <string name="about_features_text_second">         Displayed information is based on the location (city based) you provide     </string>
  <string name="about_display_header">         Display     </string>
  <string name="about_display_text">         A simple UI designed to give you the most important information in the easiest way     </string>
  <string name="about_customize_header">         Customize     </string>
  <string name="about_customize_text">         Use the settings window to change the displayed location, preferred measurement unit, app language and number of displayed days     </string>
  <string name="settings_error_toast">Please enter a valid city name</string>
  <string name="settings_location_title">Location</string>
  <string name="settings_city_placeholder">Enter a city name</string>
  <string name="settings_measurement_title">Measurement Units</string>
  <string name="settings_metric_radio">Metric</string>
  <string name="settings_imperial_radio">Imperial</string>
  <string name="settings_language_title">App language</string>
  <string name="settings_days_title">Number of displayed days</string>
  <string name="settings_save_changes_btn">Save Changes</string>
  <string name="settings_saved_toast">Saved settings</string>
  <string name="description_clear_sky">Clear sky </string>
  <string name="description_few_clouds">Few clouds </string>
  <string name="description_scattered_clouds">Scattered clouds </string>
  <string name="description_broken_clouds">Broken clouds </string>
  <string name="description_shower_rain">Shower rain </string>
  <string name="description_rain">Rain </string>
  <string name="description_thunderstorm">Thunderstorm </string>
  <string name="description_snow">Snow </string>
  <string name="description_mist">Mist </string>
  <string name="days_sunday">Sunday</string>
  <string name="days_monday">Monday</string>
  <string name="days_tuesday">Tuesday</string>
  <string name="days_wednesday">Wednesday</string>
  <string name="days_thursday">Thursday</string>
  <string name="days_friday">Friday</string>
  <string name="days_saturday">Saturday</string>
  <string name="not_available">N/A</string>
  <string name="month_january">January</string>
  <string name="month_february">February</string>
  <string name="month_march">March</string>
  <string name="month_april">April</string>
  <string name="month_may">May</string>
  <string name="month_june">June</string>
  <string name="month_july">July</string>
  <string name="month_august">August</string>
  <string name="month_september">September</string>
  <string name="month_october">October</string>
  <string name="month_november">November</string>
  <string name="month_december">December</string>
  <string name="error_city_name">Please enter a valid city name</string>
  <plurals name="daily_day_number">
    <item quantity="one">\"Displaying %d day\"</item>
    <item quantity="other">Displaying next %d days</item>
  </plurals>
  <string-array name="settings_language_options">
    <item>English</item>
    <item>German</item>
    <item>Spanish</item>
  </string-array>
  <string name="settings_default_location">New York</string>
</resources>